footer section completed

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -7,9 +7,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     max-width: 1440px;
 }
+
 .inter-font {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
@@ -22,41 +24,47 @@ body{
     font-weight: 400;
     font-style: normal;
     font-size: 9rem;
-  }
-  
+}
+
 /*Shared styles*/
-.display-flex{
+.display-flex {
     display: flex;
 }
 
 
 /*Header section styles*/
-.header{
+.header {
+    padding-top: 35px;
     justify-content: space-between;
     align-items: center;
 }
-.nav-bar{
-    margin-top: 58px;
+.menu-bar{
+    display: none;
 }
-.brand{
+
+.brand {
     color: #E6533C;
-    margin-left: 4rem;
+    margin-left: 64px;
     font-size: 2rem;
     font-weight: bold;
 }
-.nav-items{
+
+.nav-items {
     align-items: center;
 }
-.nav-item{
+
+.nav-item {
     list-style: none;
     margin-right: 4rem;
 }
-.nav-link{
+
+.nav-link {
     text-decoration: none;
     color: white;
     font-size: 18px;
 }
-#link-bg-color{
+
+#link-bg-color {
     border: none;
     background-color: #E6533C;
     padding: 8px 20px;
@@ -64,20 +72,22 @@ body{
     font-weight: 600;
 }
 
-.background{
+.background {
     background-color: #212121;
 }
-.banner-text{
+
+.banner-text {
     max-width: 520px;
     margin-left: 4rem;
 }
 
-.banner{
+.banner {
     justify-content: space-evenly;
     align-items: center;
-    width: 100%;
+
 }
-.top-right{
+
+.top-right {
     position: absolute;
     background-color: #212121;
     padding: 10px;
@@ -87,7 +97,8 @@ body{
     top: 35%;
     right: 5%;
 }
-.bottom-left-point{
+
+.bottom-left-point {
     display: inline-block;
     border-radius: 50%;
     background-color: #E6533C;
@@ -96,7 +107,8 @@ body{
     vertical-align: middle;
     margin-right: 5px;
 }
-.bottom-left{
+
+.bottom-left {
     position: absolute;
     background-color: #212121;
     padding: 8px 10px;
@@ -106,23 +118,26 @@ body{
     bottom: 5%;
     left: 60%;
 }
-.overlay-text{
+
+.overlay-text {
     color: white;
     text-align: center;
     font-size: 2.5rem;
 }
-.section-title{
+
+.section-title {
     font-size: 5rem;
     color: white;
     margin-bottom: 20px;
 }
 
-.section-description{
+.section-description {
     font-size: 1rem;
     color: #8B8B8B;
     margin-bottom: 20px;
 }
-.btn-primary{
+
+.btn-primary {
     border: none;
     border-radius: 39px;
     padding: 16px 46px;
@@ -132,7 +147,7 @@ body{
     font-weight: 600;
 }
 
-.btn-secondary{
+.btn-secondary {
     border: 1px solid #8B8B8B;
     border-radius: 39px;
     padding: 16px 46px;
@@ -143,48 +158,55 @@ body{
     margin-left: 16px;
 }
 
-.section-background{
+.section-background {
     background-color: #000000;
 }
-.text-primary{
+
+.text-primary {
     color: white;
     font-size: 3.5rem;
     font-weight: bold;
     padding: 45px 0 25px 0;
 }
-.text-center{
+
+.text-center {
     text-align: center;
 }
 
-.image-title{
+.image-title {
     font-size: 18px;
     font-weight: 600;
     color: white;
     text-align: center;
     margin: 10px 0;
 }
-.image-description{
+
+.image-description {
     color: #8B8B8B;
     text-align: center;
     margin-bottom: 90px;
 }
 
-.habit{
+.habit {
     text-align: center;
 }
-.habits{
+
+.habits {
     justify-content: space-between;
     align-items: center;
 }
-.habit > img{
+
+.habit>img {
     border-radius: 50%;
 }
-.habit-container{
+
+.habit-container {
     max-width: 1044px;
     margin: 0 auto;
 }
 
-.run-extra-mile, .background-color{
+.run-extra-mile,
+.background-color {
     display: flex;
     justify-content: space-around;
     max-width: 1060px;
@@ -193,57 +215,66 @@ body{
     background-color: #222222;
     padding: 30px 20px;
 }
-.text-contents{
+
+.text-contents {
     width: 440px;
-    height: 290px;
 }
-.run > img{
+
+.run>img {
     width: 366px;
     height: 312px;
     border-radius: 15px;
     object-fit: cover;
 }
 
-.bmi-calculator{
+.bmi-calculator {
     background-color: #222222;
     display: flex;
     justify-content: space-evenly;
 }
-.calculate-bmi{
+
+.calculate-bmi {
     width: 580px;
     height: 385px;
 }
-.bmi-title{
+
+.bmi-title {
     color: white;
     text-align: center;
     padding: 40px 0;
 }
-.bmi-table{
+
+.bmi-table {
     font-size: 1.5rem;
     font-weight: bold;
     color: white;
 }
 
-table{
+table {
     border-collapse: collapse;
     border: 2px solid #8B8B8B;
 }
-th,td{
+
+th,
+td {
     border: 2px solid #8B8B8B;
     color: white;
     padding: 10px;
     text-align: center;
 }
-.table-data{
+
+.table-data {
     color: white;
 }
 
-.form-container{
+.form-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 15px;
 }
-input,select{
+
+input,
+select {
     width: 100%;
     padding: 10px;
     border: none;
@@ -251,20 +282,26 @@ input,select{
     background-color: #383838;
     color: #8B8B8B;
 }
-.select-factor{
+
+.select-factor {
     grid-column-start: 1;
     grid-column-end: 3;
     color: #8B8B8B;
     margin-bottom: 20px;
 }
 
-.trainers{
+.our-team {
+    padding-bottom: 50px;
+}
+
+.trainers {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 15px;
 }
 
-.trainer > img{
+
+.trainer>img {
     width: 325px;
     height: 272px;
     border-radius: 10px;
@@ -278,9 +315,220 @@ input,select{
     font-weight: 600;
 }
 
-.description{
+.description {
     position: absolute;
     transform: translate(20%, -150%);
     font-size: 1rem;
     color: #B4B4B4;
+}
+
+.footer {
+    background-color: #222222;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.fitness-description {
+    width: 440px;
+    padding: 30px;
+}
+
+.fitness-description>h2 {
+    font-style: italic;
+    font-size: 3rem;
+    font-weight: bold;
+    color: #E6533C;
+}
+
+.fitness-description>p {
+    font-size: 1rem;
+    color: #8B8B8B;
+}
+
+.get-started {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+}
+
+.get-started>div>h4 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: white;
+}
+
+.get-started>div>ul>li {
+    list-style: none;
+}
+
+.get-started>div>ul>li>a {
+    text-decoration: none;
+    color: #B4B4B4;
+    font-size: 1rem;
+}
+
+.rights {
+    background-color: #222222;
+}
+
+hr {
+    width: 1060px;
+    margin: 0 auto;
+
+}
+
+.rights>p {
+    color: #8B8B8B;
+    text-align: center;
+    padding: 30px 0 30px 0;
+}
+
+
+/*Responsive design for mobile devices*/
+@media screen and (max-width: 576px) {
+
+    html,
+    body {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+    }
+
+    .header {
+        display: flex;
+        justify-content: space-between;
+        padding: 0 15px;
+    }
+    .brand{
+        margin-left: 0;
+        font-style: italic;
+    }
+    .menu-bar{
+        display: block;
+        color: #8B8B8B;
+    }
+    .section-title{
+        font-size: 3rem;
+        padding: 0 15px;
+    }
+    .section-description{
+        padding: 0 15px;
+    }
+    .banner,
+    .habits,
+    .run-extra-mile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .banner-text{
+        width: 100%;
+        margin: auto;
+    }
+    .btn-primary{
+        font-size: 1rem;
+        font-weight: 600;
+        padding: 16px 20px;
+        margin-left: 15px;
+    }
+    .btn-secondary{
+        font-size: 1rem;
+        font-weight: 600;
+        padding: 16px 20px;
+    }
+    .text-contents, .run {
+        width: 100%;  
+    }
+
+    .run img {
+        width: 100%;
+        height: auto;
+    }
+
+    .top-right {
+        position: absolute;
+        background-color: #212121;
+        padding: 0;
+        border-radius: 10px;
+        border: 2px solid #212121;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        top: 75%;
+        right: 5%;
+    }
+    .overlay-text {
+        color: white;
+        text-align: center;
+        font-size: 1.5rem;
+    }
+    .overlay-description {
+        font-size: .75rem;
+        color: #8B8B8B;
+        margin-bottom: 20px;
+    }
+    .bottom-left {
+        position: absolute;
+        background-color: #212121;
+        padding: 3px 0px;
+        border-radius: 10px;
+        border: 2px solid #212121;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        bottom: -15%;
+        left: 3%;
+    }
+    .image-description {
+        color: #8B8B8B;
+        text-align: center;
+        margin-bottom: 40px;
+    }
+    .nav-bar {
+        display: none;
+    }
+
+    .run {
+        margin-top: 80px;
+    }
+
+    .bmi-calculator {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .calculate-bmi {
+        width: 90%;
+        margin-bottom: 55px;
+    }
+
+    .form-container{
+        margin: 0 10px;
+    }
+
+    .trainers {
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+
+    .footer,
+    .get-started {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .fitness-description {
+        width: 100%;
+        padding: 20px;
+    }
+    .get-started{
+        padding-left: 20px;
+        gap: 30px;
+        margin-bottom: 20px;
+    }
+    hr {
+        width: 80%;
+    }
+
+    .rights p {
+        padding: 15px 0;
+    }
 }
